// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConferenceItem renders with all props set 1`] = `
<ResultItem
  leftActions={
    <React.Fragment>
      <UrlsAction
        icon={<ForwardRef(LinkOutlined) />}
        text="website"
        urls={
          Immutable.List [
            Immutable.Map {
              "value": "http://url.com",
            },
          ]
        }
      />
      <ProceedingsAction
        proceedings={
          Immutable.List [
            Immutable.Map {
              "publication_info": Immutable.List [
                Immutable.Map {
                  "year": 2015,
                  "journal_title": "title",
                },
              ],
            },
          ]
        }
      />
      <EditRecordAction
        pidType="conferences"
        pidValue={12345}
      />
    </React.Fragment>
  }
  rightActions={
    <ListItemAction>
      <ForwardRef
        to="/literature?q=publication_info.conference_record.$ref:12345&doc_type=conference%20paper"
      >
        <IconText
          icon={<ForwardRef(LoginOutlined) />}
          text="3 contributions"
        />
      </ForwardRef>
    </ListItemAction>
  }
>
  <Row
    gutter={0}
    type="flex"
  >
    <Col>
      <Link
        className="result-item-title"
        target="_blank"
        to="/conferences/12345"
      >
        <EventTitle
          acronym="acronym"
          title={
            Immutable.Map {
              "title": "test",
            }
          }
        />
      </Link>
    </Col>
  </Row>
  <Row
    gutter={0}
  >
    <Col>
      <ConferenceDates
        closingDate="2019-11-28"
        openingDate="2019-11-21"
      />
      . 
      <AddressList
        addresses={
          Immutable.List [
            Immutable.Map {
              "cities": Immutable.List [
                "Liverpool",
              ],
              "country_code": "USA",
              "country": "country",
            },
          ]
        }
      />
       (C05-09-16.1)
    </Col>
  </Row>
  <Row
    className="mt2"
    gutter={0}
  >
    <Col>
      <InspireCategoryList
        categories={
          Immutable.List [
            Immutable.Map {
              "term": "physics",
            },
          ]
        }
        wrapperClassName="di"
      />
    </Col>
  </Row>
</ResultItem>
`;

exports[`ConferenceItem renders with only needed props 1`] = `
<ResultItem
  leftActions={<React.Fragment />}
  rightActions={false}
>
  <Row
    gutter={0}
    type="flex"
  >
    <Col>
      <Link
        className="result-item-title"
        target={null}
        to="/conferences/12345"
      >
        <EventTitle
          title={
            Immutable.Map {
              "title": "test",
            }
          }
        />
      </Link>
    </Col>
  </Row>
  <Row
    gutter={0}
  >
    <Col>
      <ConferenceDates
        openingDate="2019-11-21"
      />
    </Col>
  </Row>
  <Row
    className="mt2"
    gutter={0}
  >
    <Col>
      <InspireCategoryList
        wrapperClassName="di"
      />
    </Col>
  </Row>
</ResultItem>
`;
